# MuuvBoard

./: .gitignore  .pre-commit-config.yaml  .prettierrc.json  README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  index.js
client/src/components/: Board.js  BoardLoader.js  ContextMenu.js  (+16 more)
server/: Dockerfile  manage.py  pyproject.toml
server/boards/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/boards/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20210515_2218.py  0004_auto_20210516_2337.py  0005_auto_20210516_2347.py  0006_auto_20210517_2012.py  0007_alter_board_updated.py  0008_alter_board_title.py  0009_auto_20210518_0030.py  0010_delete_pin.py  0011_board_author.py
server/core/: permissions.py
server/files/: admin.py  models.py  serializers.py  urls.py  views.py
server/files/migrations/: 0001_initial.py  0002_alter_image_pin.py  0003_auto_20210701_0144.py  0004_auto_20210701_0155.py
server/muuvboard/: asgi.py  settings.py  urls.py  wsgi.py
server/pins/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/pins/migrations/: 0001_initial.py  0002_remove_pin_image.py  0003_pin_author.py
server/source/: urls.py
server/test/: conftest.py
server/test/boards/: boards_tests.py  conftest.py  pins_tests.py
server/test/files/: files_test.py  files_tests.py
server/test/pins/: pin_permissions_tests.py  pin_tags_tests.py  pins_tests.py  search_tests.py
server/users/migrations/: 0001_initial.py
(+6 files in other folders)
