[tool.poetry]
name = "muuvboard-server"
version = "0.1.0"
description = "Backend of Muuvboard."
authors = ["Carson Weeks <mail@carsonweeks.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
django-cors-headers = "^3.7.0"
Django = "^3.2.3"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.8.6"
# only use this until VSCode supports pyflakes.
pylint = "^2.8.2"
pylint-django = "^2.4.4"
django-taggit = "^1.4.0"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b1"
isort = "^5.8.0"
pytest-django = "^4.2.0"
pre-commit = "^2.12.1"
ptvsd = "^4.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pylint.master]
load-plugins = "pylint_django"
django-settings-module = "muuvboard.settings"

[tool.pylint.format]
max-line-length = 89

[tool.black]
line-length = 89

[tool.isort]
line_length = 89

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "muuvboard.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
